--- a/Cyberpalata.Website/cyberpalata-web/src/Components/Index.css
+++ b/Cyberpalata.Website/cyberpalata-web/src/Components/Index.css
@@ -6,7 +6,7 @@
     left: 30px;
     top: 21px;
 
-    background: url('./../../imgs/logo.png');
+    background: url('./../imgs/logo.png');
     background-position: center;
     background-size: cover;
 
@@ -27,7 +27,7 @@
     background-size: contain;
 
     /* background-color: red; */
-    background: url('./../../imgs/lounge.jpg');
+    background: url('./../imgs/lounge.jpg');
     background-position: center;
     background-size: cover;
 
@@ -42,7 +42,7 @@
     width: 32vw;
     height: 22vh;
     /* background-color: purple; */
-    background: url('./../../imgs/gamingRoom.jpg');
+    background: url('./../imgs/gamingRoom.jpg');
     background-position: center;
     background-size: cover;
     border: 1px solid #FFFFFF;
@@ -61,7 +61,7 @@
 
     /* background-color: black; */
 
-    background: url('./../../imgs/gameConsoleRoom.jpg');
+    background: url('./../imgs/gameConsoleRoom.jpg');
     background-position: center;
     background-size: cover; 
 
