--- a/Cyberpalata.Website/cyberpalata-web/src/index.css
+++ b/Cyberpalata.Website/cyberpalata-web/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.mycontainer{
+  display: table;
+  height: 100%;
+}
+.myelement{
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+}
