--- a/Cyberpalata.Website/cyberpalata-web/src/Components/Index.css
+++ b/Cyberpalata.Website/cyberpalata-web/src/Components/Index.css
@@ -88,8 +88,107 @@
 
 }
 
-
 .labelText
 {
     font-size: large;
+}
+.animate-charcter
+{
+   text-transform: uppercase;
+  background-image: linear-gradient(
+    -225deg,
+    #000000 0%,
+    #091aaf 29%,
+    #00ffff 67%,
+    #b3f0ff 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2s linear infinite;
+  display: inline-block;
+      /* font-size: 190px; */
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+
+/* the code you want is around line 45  */
+
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700");
+
+* {
+  padding: 0;
+  margin: 0;
+}
+
+html {
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body {
+  font-family: Montserrat, sans-serif;
+  height: 100%;
+  min-height: 100vh;
+  background-color: #ebf3ff;
+}
+
+.container {
+  display: flex;
+  flex-flow: column;
+  width: 60%;
+  height: 100vh;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
+}
+
+.hover-container {
+  text-align: center;
+  margin-bottom: 2em;
+}
+
+.body-text {
+  margin: 0.5em 0;
+}
+
+/* --- this is the code you probably want ---- */
+
+.mya {
+  border-bottom: 1.5px solid #FFFF;
+  /* font-size: 3em; */
+  transition: all 0.25s linear;
+  position: relative;
+}
+
+.mya:before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: #61a3ff;
+  position: absolute;
+  left: 0;
+  bottom: -3px; /* this is to match where the border is */
+  transform-origin: left; 
+  transform: scale(0);
+  transition: 0.25s linear;
+/*   will-change: transform; */
+}
+
+.mya:hover:before {
+  transform: scale(1);
 }
