--- a/Cyberpalata.Website/cyberpalata-web/src/pages/body/tournament/custom-tree.css
+++ b/Cyberpalata.Website/cyberpalata-web/src/pages/body/tournament/custom-tree.css
@@ -1,13 +1,12 @@
 .node__root > circle {
-    fill: red;
-  }
-  
-  .node__branch > circle {
-    fill: yellow;
-  }
-  
-  .node__leaf > circle {
-    fill: green;
-    /* Let's also make the radius of leaf nodes larger */
-    r: 150;
+  fill: #3c21ad;
+}
+
+.node__branch > circle {
+  fill: #473950;
+}
+
+.node__leaf > circle {
+  fill: green;
+  /* Let's also make the radius of leaf nodes larger */
 }
