--- a/Cyberpalata.Website/cyberpalata-web/src/Components/Index.css
+++ b/Cyberpalata.Website/cyberpalata-web/src/Components/Index.css
@@ -469,3 +469,32 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
   }  
 
 }
+
+
+.notification
+{ 
+  position: relative;
+}
+
+.counter
+{
+  width: 17px;
+  height: 17px;
+  background-color: red;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  color:white;
+  position: absolute;
+  top:1px;
+  right: -3px;
+}
+
+.icon 
+{
+  width: 30px;
+  height: 30px;
+  margin-top: 1vh;  
+}
