--- a/Cyberpalata.Website/cyberpalata-web/src/Components/Index.css
+++ b/Cyberpalata.Website/cyberpalata-web/src/Components/Index.css
@@ -498,3 +498,46 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
   height: 30px;
   margin-top: 1vh;  
 }
+
+
+
+.card
+{
+  width: 20vw;
+  height: 50vh;
+  background-color: white;
+  position: relative;
+  display: flex;
+  justify-content:center;
+  align-items: center;
+}
+
+.cardContent
+{
+  font-size: 3vw;
+}
+
+.links
+{
+  position: absolute;
+  bottom: 20px;
+  right:15%;
+}
+
+.myConteiner
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 80vh;
+}
+
+.blackLink
+{
+  border: 1px solid;
+  padding: 1vh;
+  border-radius: 1vh;
+  color:black;
+  margin: 1vw;
+}
