--- a/Cyberpalata.Website/cyberpalata-web/src/Components/Index.css
+++ b/Cyberpalata.Website/cyberpalata-web/src/Components/Index.css
@@ -550,8 +550,29 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
   height: 75%;
 }
 
-.message
+.from-user
 {
+  font-size: small;
+  margin-bottom: 3px;
+  margin-right: 5px;
+}
+
+.message-container {
+  height: 400px;    
+  background-color: white;
+  overflow: auto;
+  border-radius: 5px;
+  margin-bottom: 2px;
+}
+
+
+.user-message {
+  text-align: right;
+  padding-right: 5px;
+  font-size: 18px;
+}
+
+.message {
   display: inline-flex;
   margin: 0px auto 0px auto;
   padding: 5px;
@@ -561,8 +582,7 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
   margin-top: 3px;
 }
 
-.from-user
-{
+.from-user {
   font-size: small;
   margin-bottom: 3px;
   margin-right: 5px;
